# fault-tolerant-mpc

./: .gitignore  README.md  documentation.md  mkdoc.sh  model.py  pyproject.toml  sim.py  sim_env.py  terminal.yaml  terminal_real.yaml
config/: reactive.yaml
controllers/: dummy_controller.py  spiraling_mpc.py
controllers/tools/: control_allocator.py  input_bounds.py  spiral_parameters.py  terminal_ingredients.py
data/: InertialProperties.md
docs/: animate.md  sim_env.md
examples/: sim.py
ft_mpc/config/: reactive.yaml  terminal.yaml
ft_mpc/controllers/: dummy_controller.py  spiraling_mpc.py
ft_mpc/controllers/tools/: input_bounds.py  spiral_parameters.py  terminal_ingredients.py
ft_mpc/models/: spiral_model.py  sys_model.py
ft_mpc/simulation/: sim_env.py
ft_mpc/util/: animate.py  controller_debug.py  polytope.py
models/: spiral_model.py  sys_model.py
util/: animate.py  broken_thruster.py  controller_debug.py  cross_expr.py  cross_expr_term_1.py  cross_expr_v2.py  get_trajectory.py  polytope.py  utils.py
