[project]
name = "ft_mpc"
version = "0.1.0"
description = "Fault-tolerant MPC for actuation failure in spacecraft."
authors = [
    {name = "raphael-jms",email = "stockner@kth.se"},
    {name = "Pedro-Roque",email = "padr@kth.se"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
matplotlib = "^3.10.1"
numpy = "<2.0.0"
scipy = "==1.11.4"
casadi = "^3.6.7"
cvxpy = "^1.6.4"
polytope = "^0.2.5"
pyyaml = "^6.0.2"
qpsolvers = "^4.5.0"
pympc = {git = "https://github.com/TobiaMarcucci/pympc.git"}
sympy = "^1.13.3"
